--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,15 @@
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
+        "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "4.4.*",
         "symfony/framework-bundle": "4.4.*",
         "symfony/maker-bundle": "1.39.1",
         "symfony/security-bundle": "4.4.*",
+        "symfony/validator": "4.4.*",
         "symfony/yaml": "4.4.*"
     },
     "config": {
